ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: mar-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
# annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: "webapprouting.kubernetes.azure.com"
#   rules:
#   - http:
#       paths:
#       - path: /demosimplon(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: demosimplon-service
#             port:
#               number: 80
